# defenseclaw

./: .gitignore  .goreleaser.yaml  AGENTS.md  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  release.yaml
cli/: pyproject.toml
cli/defenseclaw/: __init__.py  codeguard_skill.py  config.py  context.py  db.py  gateway.py  guardrail.py  logger.py  main.py
cli/defenseclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/defenseclaw/commands/: cmd_aibom.py  cmd_alerts.py  cmd_deploy.py  cmd_init.py  cmd_mcp.py  cmd_plugin.py  cmd_setup.py  cmd_sidecar.py  cmd_skill.py  cmd_status.py
cli/defenseclaw/enforce/: __init__.py  policy.py  skill_enforcer.py
cli/defenseclaw/scanner/: __init__.py  aibom.py  base.py  mcp.py  skill.py
cli/tests/: helpers.py  test_claw_inventory.py  test_cli_smoke.py  test_cmd_init.py  test_cmd_mcp.py  test_cmd_misc.py  test_cmd_plugin.py  test_cmd_skill.py  test_commands.py  test_config.py  test_enforcer.py  test_gateway.py  test_guardrail.py  test_models_db.py  test_scanners.py
docs/: CLI.md  INSTALL.md  QUICKSTART.md  README.md  TASKS.md  TESTING.md
extensions/defenseclaw/: package-lock.json  package.json  tsconfig.json
guardrails/: defenseclaw_guardrail.py
internal/audit/: logger.go
internal/cli/: daemon.go  root.go  sidecar.go
internal/config/: actions.go  config.go  config_test.go  defaults.go
internal/gateway/: api.go  gateway_test.go  health.go  inspect.go  litellm.go  router.go  rpc.go  rules.go  rules_analysis_test.go  rules_test.go  sidecar.go
internal/policy/: engine.go  engine_test.go  types.go
internal/scanner/: mcp.go  scanner_test.go  skill.go
internal/telemetry/: lifecycle.go  metrics.go  provider_test.go  runtime.go
internal/watcher/: watcher.go
policies/rego/: admission.rego  (+8 more)
scripts/: install.sh
(+14 files in other folders)
