[project]
name = "defenseclaw"
version = "0.1.0"
description = "Enterprise governance layer for OpenClaw — secures agentic AI deployments"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "click==8.3.1",
    "pyyaml==6.0.3",
    "requests==2.33.0",
    "rich>=13.0",
    "cisco-ai-skill-scanner==2.0.6",
    "cisco-ai-mcp-scanner>=4.3; python_version>='3.11'",
]

[project.optional-dependencies]
tui = ["textual>=0.50"]
guardrail = ["litellm[proxy]>=1.82.3"]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "ruff==0.15.7",
]

[project.scripts]
defenseclaw = "defenseclaw.main:cli"

[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["cli"]

[tool.uv]
default-groups = ["dev"]
# cisco-ai-skill-scanner 2.0.6 pins rich==14.2.0 but also pins
# litellm==1.82.3 which requires rich<14. Override to resolve.
override-dependencies = ["rich>=13.7.1,<14.0.0"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["cli/tests"]
