[project]
name = "defenseclaw"
version = "0.1.0"
description = "Enterprise governance layer for OpenClaw — Python CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "cisco-ai-skill-scanner>=2.0",
    "requests>=2.31",
    "rich>=13.0",
]

[project.optional-dependencies]
tui = ["textual>=0.50"]

[project.scripts]
defenseclaw = "defenseclaw.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["defenseclaw*"]
